Fix overflowing issues with forms

--- a/src/subtitulamos/resources/assets/css/form.css
+++ b/src/subtitulamos/resources/assets/css/form.css
@@ -2,7 +2,7 @@
   background-color: var(--color-bg);
   border-radius: var(--standard-border-radius);
   position: relative;
-  min-width: 300px;
+  min-width: 250px;
   max-width: 550px;
   width: 100%;
   margin: 0 auto;
@@ -56,6 +56,7 @@
   flex: 1;
   color: var(--color-gray-a);
   padding: var(--standard-padding);
+  max-width: calc(100% - 20px); /* whole width minus icon size */
 }
 
 /* Workaround to make the background of autofilled fields invisible */
